# keystone

./: .gitignore  Makefile  README.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 1247e8158e59_create_etl_runs_table.py  29feceb4dc34_add_clr_ratio_effective_tax_rate_and_.py  3905480dfacd_create_counties_and_county_year_settings.py  4c3ab642c4f5_add_hundred_block_to_properties_for_.py  a0d5a957e619_create_properties_and_sales_tables.py  a8be66e7901d_populate_clr_ratios_effective_tax_rates_.py  d71161fc307e_seed_pennsylvania_counties_and_2026_.py  d7ec42908766_use_clock_timestamp_in_set_updated_at.py  d9993c8c65f7_widen_money_and_area_columns_to_bigint.py  e241ddf76e00_add_census_tract_ward_and_street_code_.py  f000f35cac1e_create_updated_at_trigger_function.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/core/: config.py  database.py  logging.py
backend/app/etl/: __init__.py  cli.py  hashing.py  runner.py  types.py
backend/app/models/: __init__.py  base.py  county.py  etl_run.py  property.py  sale.py
backend/app/repositories/: county.py  property.py
backend/app/schemas/: county.py  property.py  recommendation.py  uniformity.py  valuation.py
backend/app/services/: address_parser.py  property_category_mapper.py
backend/tests/: conftest.py  factories.py
backend/tests/integration/: test_counties_api.py  test_county_model.py  test_database_connection.py  test_database_session.py  (+12 more)
backend/validation/: __init__.py  loader.py  runner.py  schema.py
(+48 files in other folders)
